# github-searcher

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/project/: settings.py  urls.py
backend/search/: tests.py  urls.py  views.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: Grid.tsx  Header.tsx  SearchBar.tsx
frontend/src/styles/: App.scss  Grid.scss  Header.scss  SearchBar.scss
